Prevent resize-helper borders from causing overflow

--- a/borders.css
+++ b/borders.css
@@ -1,5 +1,9 @@
-.bordered.poem-container {
-  border-right: 1px solid blue;
+body, .book {
+  overflow: hidden;
+}
+
+.poem-container {
+  border-right: 1px solid white;
   width: calc(50% - 1px);
   border-collapse: collapse;
 }
@@ -9,10 +13,22 @@
   width: 50%;
 }
 
-body.bordered {
-  border: 1px solid blue;
+.poem-container.bordered {
+  border-right-color: blue;
 }
 
-.bordered.poem1, .bordered.poem2 {
-  border: 1px solid green;
+.book {
+  border: 1px solid white;
+}
+
+.book.bordered {
+  border-color: blue;
+}
+
+.poem1, .poem2 {
+  border: 1px solid white;
+}
+
+.poem1.bordered, .poem2.bordered {
+  border-color: green;
 }
