--- a/override.css
+++ b/override.css
@@ -16,12 +16,14 @@
 }
 
 .poem-container {
-    margin-top: 200px;
+    margin-top: 0;
 }
 
 .book {
     width: 90%;
-    margin: auto;
+    padding: 100px 0;
+    margin: 100px auto;
+    overflow: auto;
 }
 
 .poem1, .poem2 {
